Fix positioning of expand/collapse nav arrow. #25
* Also corrects inconsistent nav hover state on Firefox.

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -472,7 +472,7 @@ header nav ul {
 /* first descendant link within a top level navigation item */
 .nav-item > a {
     position: relative;
-    display: inline-flex;
+    display: inline-block;
     padding: (.25 * $base-line-height) (.5 * $base-line-height);
     margin: 0 0 -1px 0;
     border: 1px solid transparent;
@@ -495,7 +495,6 @@ header nav ul {
     border-bottom: 0;
     z-index: 1;
     margin-bottom: 0;
-    text-decoration: underline;
 }
 
 header nav > ul > li > .sub-nav-toggle {
@@ -507,8 +506,6 @@ header nav > ul > li > .sub-nav-toggle {
 .nav-menu > .nav-item > [role="button"]:after {
     content: "\00A0\00A0\f0da";
     font-family: "Font Awesome 5 Free";
-    display: inline-block;
-    line-height: 1.4;
     font-weight: 900;
 }
 
